--- a/feeds/card.html
+++ b/feeds/card.html
@@ -3,8 +3,8 @@
 // Đây là bảng gieo của cardview
 //
 ///////////////////////////////
-<li class="list-group-item list-group-item-action">
-    <div class="card shadow">
+<div>
+    <div class="card">
         <div class="card-header">
             <strong id="name">NameRepoValue</strong> 
             <i id="language" style="float: right;">LanguageRepoValue</i>
@@ -13,13 +13,13 @@
             <p id="des" class="card-text">DesRepoValue</p>
         </div>
         <div class="card-footer">
-            <a id="viewFeeds"><button class="btn btn-primary">Feeds</button></a>
+            <a id="viewFeeds" href="FeedsValue"><button class="btn btn-primary">Feeds</button></a>
             <button style="margin-left: 10px;" class="btn btn-outline-danger"><i id="star" class="fas fa-star">StarRepoValue</i></button>
             <button style="margin-left: 10px;" class="btn btn-outline-danger"><i id="watch" class="fas fa-eye">WatchRepoValue</i></button>
             <button style="margin-left: 10px;" class="btn btn-outline-danger"><i id="fork" class="fas fa-share">ForkRepoValue</i></button>
         </div>
     </div>
-</li>
+</div>
 
 ///////////////////////////////
 //
@@ -33,3 +33,6 @@
 
 
 <li class="list-group-item list-group-item-action"><div class="card shadow"><div class="card-header"><strong id="name">NameRepoValue</strong><i id="language" style="float: right;">LanguageRepoValue</i></div><div class="card-body"><p id="des" class="card-text">DesRepoValue</p></div><div class="card-footer"><a id="viewFeeds"><button class="btn btn-primary">Feeds</button></a><button style="margin-left: 10px;" class="btn btn-outline-danger"><i id="star" class="fas fa-star">StarRepoValue</i></button><button style="margin-left: 10px;" class="btn btn-outline-danger"><i id="watch" class="fas fa-eye">WatchRepoValue</i></button><button style="margin-left: 10px;" class="btn btn-outline-danger"><i id="fork" class="fas fa-share">ForkRepoValue</i></button></div></div></li>
+
+
+<div><div class="card"><div class="card-header"><strong id="name">NameRepoValue</strong> <i id="language" style="float: right;">LanguageRepoValue</i></div><div class="card-body"><p id="des" class="card-text">DesRepoValue</p></div><div class="card-footer"><a id="viewFeeds" href="FeedsValue"><button class="btn btn-primary">Feeds</button></a><button style="margin-left: 10px;" class="btn btn-outline-danger"><i id="star" class="fas fa-star">StarRepoValue</i></button><button style="margin-left: 10px;" class="btn btn-outline-danger"><i id="watch" class="fas fa-eye">WatchRepoValue</i></button><button style="margin-left: 10px;" class="btn btn-outline-danger"><i id="fork" class="fas fa-share">ForkRepoValue</i></button></div></div></div>
