--- a/feeds/eventCard.html
+++ b/feeds/eventCard.html
@@ -4,18 +4,20 @@
     <div class="card-header">
         <img class="img-thumbnail rounded-circle" src="UserAvatarValue" style="width: 50px; height: 50px;">
         <strong>UserNameValue</strong>
-        <i>ActionValue</i>
+        <span class="ActionStyleClass">ActionValue</span>
     </div>
     <div class="card-body">
         <strong>TitleIssueValue</strong>
-        <p>BodyIssueValue</p>
+        <div>BodyIssueValue</div>
     </div>
     <div class="card-footer">
         <a href="UrlIssuesValue"><button class="btn btn-primary"><i class="fab fa-github"></i></button></a>
     </div> 
 </div>
+<div class="card list-group-item list-group-item-action">
+<div class="card-header"><img class="img-thumbnail rounded-circle" src="UserAvatarValue" style="width: 50px; height: 50px;"><strong>UserNameValue</strong><span class="ActionStyleClass">ActionValue</span></div><div class="card-body"><strong>TitleIssueValue</strong><div>BodyIssueValue</div></div><div class="card-footer"><a href="UrlIssuesValue"><button class="btn btn-primary"><i class="fab fa-github"></i></button></a></div> 
+</div>
 
-<div class="card list-group-item list-group-item-action"><div class="card-header"><img class="img-thumbnail rounded-circle" src="UserAvatarValue" style="width: 50px; height: 50px;"><strong>UserNameValue</strong><i>ActionValue</i></div><div class="card-body"><strong>TitleIssueValue</strong><p>BodyIssueValue</p></div><div class="card-footer"><a href="UrlIssuesValue"><button class="btn btn-primary"><i class="fab fa-github"></i></button></a></div> </div>
 
 <!--Comment isues-->
 
