--- a/feeds/view.html
+++ b/feeds/view.html
@@ -18,7 +18,20 @@
     </head>
     <body onLoad="init()">
         <div id="listview_feeds" class="list-group">
+            <div class="card list-group-item list-group-item-action">
+                <div class="card-header">
+                    <img class="img-thumbnail rounded-circle" src="kode.png" style="width: 50px; height: 50px;">
+                    <strong>UserNameValue</strong>
+                    <span class="ActionStyleClass">ActionValue</span>
+                </div>
+                <div class="card-body">
+                    <strong>TitleIssueValue</strong>
+                    <div>BodyIssueValue</div>
+                </div>
+                <div class="card-footer">
+                    <a href="UrlIssuesValue"><button class="btn btn-primary"><i class="fab fa-github"></i></button></a>
+                </div> 
+            </div>
         </div>
-        
     </body>
 </html>
