--- a/project3/login.html
+++ b/project3/login.html
@@ -21,19 +21,46 @@
 
     <!-- Some JS script -->
     <script>
-        function show_create(){
-    $(".login-form").css("display","none");
-    $(".signup-form").fadeIn();
-}
-function show_login(){
-    $(".signup-form").css("display","none");
-    $(".login-form").fadeIn();
-}
+        function show_create() {
+            $(".login-form").css("display", "none");
+            $(".signup-form").fadeIn();
+        }
+        function show_login() {
+            $(".signup-form").css("display", "none");
+            $(".login-form").fadeIn();
+        }
     </script>
 
 </head>
+
 <body>
     <div class="body">
+        <!-- Messenger Chat Plugin Code -->
+        <div id="fb-root"></div>
+
+        <!-- Your Chat Plugin code -->
+        <div id="fb-customer-chat" class="fb-customerchat">
+        </div>
+
+        <script>
+            var chatbox = document.getElementById('fb-customer-chat');
+            chatbox.setAttribute("page_id", "101239725542094");
+            chatbox.setAttribute("attribution", "biz_inbox");
+            window.fbAsyncInit = function () {
+                FB.init({
+                    xfbml: true,
+                    version: 'v11.0'
+                });
+            };
+
+            (function (d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) return;
+                js = d.createElement(s); js.id = id;
+                js.src = 'https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js';
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));
+        </script>
         <div class="layer">
             <div class="form">
                 <div class="login-form">
@@ -46,7 +73,9 @@ function show_login(){
                         </form>
                     </div>
                     <br>
-                    Don't have an account? <button type="button" id="showCreateBtn" class="togglebtn" onclick="show_create()">Create an account</button> now! Or <a href="index.html" class="togglebtn">go back to homepage</a> 
+                    Don't have an account? <button type="button" id="showCreateBtn" class="togglebtn"
+                        onclick="show_create()">Create an account</button> now! Or <a href="index.html"
+                        class="togglebtn">go back to homepage</a>
                 </div>
                 <div class="signup-form">
                     <div class="heading"> Sign up </div>
@@ -55,15 +84,18 @@ function show_login(){
                             <input type="text" class="input" placeholder="New Email address..." required>
                             <input type="password" class="input" placeholder="New password..." required>
                             <input type="password" class="input" placeholder="Repeat new password..." required>
-                            <input onclick="location.href = 'signsucc.html';" type="submit" class="submit" value="Create account">
+                            <input onclick="location.href = 'signsucc.html';" type="submit" class="submit"
+                                value="Create account">
                         </form>
                     </div>
                     <br>
-                    Already signed up? <button type="button" id="showCreateBtn" class="togglebtn" onclick="show_login()">Login</button>.
+                    Already signed up? <button type="button" id="showCreateBtn" class="togglebtn"
+                        onclick="show_login()">Login</button>.
                 </div>
             </div>
         </div>
     </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
+
 </html>
